--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-16.29MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-2.60MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3035, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-555.5KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3504, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-10.46MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
-  - {name: 🇨🇳 中国-11.83MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-11.31MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3509, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-5.53MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 3025, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-271.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-439.8KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-203.1KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-7.64MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-449.1KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3507, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇸🇬 新加坡-3.83MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-16.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-555.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.83MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
