--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.69MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.25MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.56MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-938.1KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3035, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-995.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11199, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-245.6KB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-10.32MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: TWpNNU1qTXhOVEl3TURZdWJXbGpjbTl6YjJaMExtTnZiUQ}
+  - {name: 🇨🇳 中国-450.7KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3506, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-283.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-345.9KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-367.9KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-466.6KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-479.8KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-938.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-245.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-450.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-442.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-995.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-283.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-367.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-466.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-479.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
